<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/img_header_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@color/colorPrimaryDark"/>

    <RelativeLayout
        android:id="@+id/nav_rl"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="@dimen/profile_width"
            android:layout_height="@dimen/profile_height"
            android:scaleType="centerCrop"
            android:padding="2dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/round_corners_all"/>

        <TextView
            android:id="@+id/nav_name_profile"
            android:layout_toRightOf="@+id/img_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/text_name_nav_header"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/nav_rl"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/nav_edittext_search"
            android:layout_width="match_parent"
            android:layout_toLeftOf="@+id/nav_btn_search"
            android:layout_height="wrap_content"
            android:hint="@string/search_edittext"
            android:textColor="@color/colorWhite"
            android:maxLines="2"
            android:shadowColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="12sp"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/colorWhite"/>

        <Button
            android:id="@+id/nav_btn_search"
            android:layout_width="64dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:text="@string/search"
            android:textSize="12sp"
            android:background="@color/colorWhite"
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="16dp"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

</RelativeLayout>