<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBlack"
            app:titleTextColor="@color/colorWhite" />

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/movie_page_imageview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:background="@color/colorBg"/>

            <LinearLayout
                android:layout_below="@+id/movie_page_imageview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorWhite"
                    android:layout_marginBottom="4dp"
                    android:paddingBottom="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:id="@+id/movie_page_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/desription"
                            android:textColor="@color/colorBlack"
                            android:layout_toLeftOf="@+id/movie_page_ll_time"/>

                        <LinearLayout
                            android:id="@+id/movie_page_ll_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_alignParentRight="true"
                            android:gravity="center">
                            <ImageView
                                android:id="@+id/movie_page_icon_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/ic_access_time_black_24dp" />

                            <TextView
                                android:id="@+id/movie_page_runtime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:text="@string/runtime"
                                android:paddingLeft="4dp"/>
                        </LinearLayout>

                    </RelativeLayout>

                    <View
                        android:id="@+id/view_description"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/movie_page_description"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/colorBg" />

                    <TextView
                        android:id="@+id/movie_page_text_descritpion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/desription"
                        android:paddingLeft="16dp"
                        android:layout_below="@+id/view_description"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorWhite"
                    android:paddingBottom="16dp"
                    android:layout_marginBottom="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/nav_genres"
                        android:textColor="@color/colorBlack"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorBg"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="8dp"/>

                    <TextView
                        android:id="@+id/movie_page_text_genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:text="@string/nav_genres"
                        android:textSize="14sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorWhite"
                    android:paddingBottom="16dp"
                    android:layout_marginBottom="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/actors"
                        android:textColor="@color/colorBlack"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_actors_movie_page"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="horizontal"/>

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>